Fix: `TaskListItem` assignee avatar alignment

--- a/src/modules/dashboard/components/TaskList/TaskListItem.css
+++ b/src/modules/dashboard/components/TaskList/TaskListItem.css
@@ -82,6 +82,6 @@ td.userAvatar {
   /* !important to override table styles */
   flex-grow: 0 !important;
   justify-content: center;
-  padding: cellPaddingVertical cellPaddingHorizontal calc(cellPaddingVertical - 6px);
+  padding: calc(cellPaddingVertical - 6px) cellPaddingHorizontal calc(cellPaddingVertical - 6px);
   height: 88px;
 }
